--- a/example/local-storage-operator.v4.12.0-202302280915/customresourcedefinition-localvolumes.local.storage.openshift.io.yaml
+++ b/example/local-storage-operator.v4.12.0-202302280915/customresourcedefinition-localvolumes.local.storage.openshift.io.yaml
@@ -1,185 +1,161 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
-  name: localvolumes.local.storage.openshift.io
+    creationTimestamp: null
+    name: localvolumes.local.storage.openshift.io
 spec:
-  group: local.storage.openshift.io
-  names:
-    kind: LocalVolume
-    listKind: LocalVolumeList
-    plural: localvolumes
-    singular: localvolume
-  scope: Namespaced
-  versions:
-  - name: v1
-    schema:
-      openAPIV3Schema:
-        description: LocalVolume is a local storage configuration used by the operator
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: spec is the specification of the desired state of selected
-              local devices
-            properties:
-              logLevel:
-                description: logLevel configures log level for the diskmaker and provisioner
-                  for this object
-                enum:
-                - Normal
-                - Debug
-                - Trace
-                - TraceAll
-                type: string
-              managementState:
-                description: Indicates whether and how the operator should manage
-                  the component
-                enum:
-                - Managed
-                - Unmanaged
-                - Removed
-                - Force
-                type: string
-              nodeSelector:
-                description: Nodes on which the provisioner must run
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              storageClassDevices:
-                description: List of storage class and devices they can match
-                items:
-                  properties:
-                    devicePaths:
-                      description: A list of devices which would be chosen for local
-                        storage. For example - ["/dev/sda", "/dev/sdb", "/dev/disk/by-id/ata-crucial"].
-                        It is strongly recommended to use the unique /dev/disk/by-id/...
-                        name if available, as these identifiers persist across node
-                        restarts.
-                      items:
+    group: local.storage.openshift.io
+    names:
+        kind: LocalVolume
+        listKind: LocalVolumeList
+        plural: localvolumes
+        singular: localvolume
+    scope: Namespaced
+    versions:
+        - name: v1
+          schema:
+            openAPIV3Schema:
+                description: LocalVolume is a local storage configuration used by the operator
+                properties:
+                    apiVersion:
+                        description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
                         type: string
-                      type: array
-                    fsType:
-                      description: File system type to create on empty volumes, such
-                        as "ext4" or "xfs". Used only when volumeMode is "Filesystem".
-                        Leave blank when volumeMode is "Block".
-                      type: string
-                    storageClassName:
-                      description: StorageClass name to use for set of matched devices
-                      type: string
-                    volumeMode:
-                      description: Volume mode. Block or Filesystem
-                      enum:
-                      - Block
-                      - Filesystem
-                      type: string
-                  required:
-                  - storageClassName
-                  - devicePaths
-                  type: object
-                type: array
-              tolerations:
-                description: A list of tolerations to pass to the diskmaker and provisioner
-                  DaemonSets.
-                items:
-                  type: object
-                  x-kubernetes-preserve-unknown-fields: true
-                type: array
-            required:
-            - storageClassDevices
-            type: object
-          status:
-            description: status is the most recently observed status selected local
-              devices
-            properties:
-              conditions:
-                description: conditions is a list of conditions and their status
-                items:
-                  description: OperatorCondition is just the standard condition fields
-                  properties:
-                    lastTransitionTime:
-                      format: date-time
-                      type: string
-                    message:
-                      type: string
-                    reason:
-                      type: string
+                    kind:
+                        description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+                        type: string
+                    metadata:
+                        type: object
+                    spec:
+                        description: spec is the specification of the desired state of selected local devices
+                        properties:
+                            logLevel:
+                                description: logLevel configures log level for the diskmaker and provisioner for this object
+                                enum:
+                                    - Normal
+                                    - Debug
+                                    - Trace
+                                    - TraceAll
+                                type: string
+                            managementState:
+                                description: Indicates whether and how the operator should manage the component
+                                enum:
+                                    - Managed
+                                    - Unmanaged
+                                    - Removed
+                                    - Force
+                                type: string
+                            nodeSelector:
+                                description: Nodes on which the provisioner must run
+                                type: object
+                                x-kubernetes-preserve-unknown-fields: true
+                            storageClassDevices:
+                                description: List of storage class and devices they can match
+                                items:
+                                    properties:
+                                        devicePaths:
+                                            description: A list of devices which would be chosen for local storage. For example - ["/dev/sda", "/dev/sdb", "/dev/disk/by-id/ata-crucial"]. It is strongly recommended to use the unique /dev/disk/by-id/... name if available, as these identifiers persist across node restarts.
+                                            items:
+                                                type: string
+                                            type: array
+                                        fsType:
+                                            description: File system type to create on empty volumes, such as "ext4" or "xfs". Used only when volumeMode is "Filesystem". Leave blank when volumeMode is "Block".
+                                            type: string
+                                        storageClassName:
+                                            description: StorageClass name to use for set of matched devices
+                                            type: string
+                                        volumeMode:
+                                            description: Volume mode. Block or Filesystem
+                                            enum:
+                                                - Block
+                                                - Filesystem
+                                            type: string
+                                    required:
+                                        - storageClassName
+                                        - devicePaths
+                                    type: object
+                                type: array
+                            tolerations:
+                                description: A list of tolerations to pass to the diskmaker and provisioner DaemonSets.
+                                items:
+                                    type: object
+                                    x-kubernetes-preserve-unknown-fields: true
+                                type: array
+                        required:
+                            - storageClassDevices
+                        type: object
                     status:
-                      enum:
-                      - "True"
-                      - "False"
-                      - Unknown
-                      type: string
-                    type:
-                      type: string
-                  required:
-                  - type
-                  - status
-                  type: object
-                type: array
-              generations:
-                description: generations are used to determine when an item needs
-                  to be reconciled or has changed in a way that needs a reaction.
-                items:
-                  description: GenerationStatus keeps track of the generation for
-                    a given resource so that decisions about forced updates can be
-                    made.
-                  properties:
-                    group:
-                      type: string
-                    lastGeneration:
-                      format: int64
-                      type: integer
-                    name:
-                      type: string
-                    namespace:
-                      type: string
-                    resource:
-                      type: string
-                  required:
-                  - group
-                  - resource
-                  - namespace
-                  - name
-                  - lastGeneration
-                  type: object
-                type: array
-              managementState:
-                enum:
-                - Managed
-                - Unmanaged
-                - Removed
-                - Force
-                type: string
-              observedGeneration:
-                format: int64
-                type: integer
-              readyReplicas:
-                format: int32
-                type: integer
-            required:
-            - conditions
-            - generations
-            type: object
-        required:
-        - spec
-        type: object
-    served: true
-    storage: true
-    subresources:
-      status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: null
-  storedVersions: null
+                        description: status is the most recently observed status selected local devices
+                        properties:
+                            conditions:
+                                description: conditions is a list of conditions and their status
+                                items:
+                                    description: OperatorCondition is just the standard condition fields
+                                    properties:
+                                        lastTransitionTime:
+                                            format: date-time
+                                            type: string
+                                        message:
+                                            type: string
+                                        reason:
+                                            type: string
+                                        status:
+                                            enum:
+                                                - "True"
+                                                - "False"
+                                                - Unknown
+                                            type: string
+                                        type:
+                                            type: string
+                                    required:
+                                        - type
+                                        - status
+                                    type: object
+                                type: array
+                            generations:
+                                description: generations are used to determine when an item needs to be reconciled or has changed in a way that needs a reaction.
+                                items:
+                                    description: GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made.
+                                    properties:
+                                        group:
+                                            type: string
+                                        lastGeneration:
+                                            format: int64
+                                            type: integer
+                                        name:
+                                            type: string
+                                        namespace:
+                                            type: string
+                                        resource:
+                                            type: string
+                                    required:
+                                        - group
+                                        - resource
+                                        - namespace
+                                        - name
+                                        - lastGeneration
+                                    type: object
+                                type: array
+                            managementState:
+                                enum:
+                                    - Managed
+                                    - Unmanaged
+                                    - Removed
+                                    - Force
+                                type: string
+                            observedGeneration:
+                                format: int64
+                                type: integer
+                            readyReplicas:
+                                format: int32
+                                type: integer
+                        required:
+                            - conditions
+                            - generations
+                        type: object
+                required:
+                    - spec
+                type: object
+          served: true
+          storage: true
+          subresources:
+            status: {}
