--- a/example/local-storage-operator.v4.12.0-202302280915/role-local-storage-metrics.yaml
+++ b/example/local-storage-operator.v4.12.0-202302280915/role-local-storage-metrics.yaml
@@ -1,15 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: local-storage-metrics
+    name: local-storage-metrics
+    namespace: openshift-local-storage
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - services
-  - endpoints
-  - pods
-  verbs:
-  - get
-  - list
-  - watch
+    - apiGroups:
+        - ""
+      resources:
+        - services
+        - endpoints
+        - pods
+      verbs:
+        - get
+        - list
+        - watch
