--- a/example/local-storage-operator.v4.12.0-202302280915/rolebinding-local-storage-metrics.yaml
+++ b/example/local-storage-operator.v4.12.0-202302280915/rolebinding-local-storage-metrics.yaml
@@ -1,12 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: local-storage-metrics
+    name: local-storage-metrics
+    namespace: openshift-local-storage
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: local-storage-metrics
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: local-storage-metrics
 subjects:
-- kind: ServiceAccount
-  name: prometheus-k8s
-  namespace: openshift-monitoring
+    - kind: ServiceAccount
+      name: prometheus-k8s
+      namespace: openshift-monitoring
