--- a/example/cluster-logging.5.5.4/clusterrole-metadata-reader.yaml
+++ b/example/cluster-logging.5.5.4/clusterrole-metadata-reader.yaml
@@ -1,15 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: metadata-reader
+    creationTimestamp: null
+    name: metadata-reader
+    namespace: openshift-logging
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  - namespaces
-  verbs:
-  - get
-  - list
-  - watch
+    - apiGroups:
+        - ""
+      resources:
+        - pods
+        - namespaces
+      verbs:
+        - get
+        - list
+        - watch
