--- a/example/cluster-logging.5.5.4/role-log-collector-privileged.yaml
+++ b/example/cluster-logging.5.5.4/role-log-collector-privileged.yaml
@@ -1,14 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  creationTimestamp: null
-  name: log-collector-privileged
+    creationTimestamp: null
+    name: log-collector-privileged
+    namespace: openshift-logging
 rules:
-- apiGroups:
-  - security.openshift.io
-  resourceNames:
-  - log-collector-scc
-  resources:
-  - securitycontextconstraints
-  verbs:
-  - use
+    - apiGroups:
+        - security.openshift.io
+      resourceNames:
+        - log-collector-scc
+      resources:
+        - securitycontextconstraints
+      verbs:
+        - use
