--- a/example/cluster-logging.5.5.4/role-prometheus.yaml
+++ b/example/cluster-logging.5.5.4/role-prometheus.yaml
@@ -1,22 +1,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  creationTimestamp: null
-  name: prometheus
+    creationTimestamp: null
+    name: prometheus
+    namespace: openshift-logging
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  - services
-  - endpoints
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - configmaps
-  verbs:
-  - get
+    - apiGroups:
+        - ""
+      resources:
+        - pods
+        - services
+        - endpoints
+      verbs:
+        - get
+        - list
+        - watch
+    - apiGroups:
+        - ""
+      resources:
+        - configmaps
+      verbs:
+        - get
