--- a/example/cluster-logging.5.5.4/rolebinding-prometheus.yaml
+++ b/example/cluster-logging.5.5.4/rolebinding-prometheus.yaml
@@ -1,13 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  creationTimestamp: null
-  name: prometheus
+    creationTimestamp: null
+    name: prometheus
+    namespace: openshift-logging
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: prometheus
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: prometheus
 subjects:
-- kind: ServiceAccount
-  name: prometheus-k8s
-  namespace: openshift-monitoring
+    - kind: ServiceAccount
+      name: prometheus-k8s
+      namespace: openshift-monitoring
