--- a/example/cluster-logging.5.5.4/service-cluster-logging-operator-metrics.yaml
+++ b/example/cluster-logging.5.5.4/service-cluster-logging-operator-metrics.yaml
@@ -1,19 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
-  labels:
-    name: cluster-logging-operator
-  name: cluster-logging-operator-metrics
+    creationTimestamp: null
+    labels:
+        name: cluster-logging-operator
+    name: cluster-logging-operator-metrics
+    namespace: openshift-logging
 spec:
-  ports:
-  - name: http-metrics
-    port: 8686
-    protocol: TCP
-    targetPort: 8686
-  selector:
-    name: cluster-logging-operator
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
+    ports:
+        - name: http-metrics
+          port: 8686
+          protocol: TCP
+          targetPort: 8686
+    selector:
+        name: cluster-logging-operator
+    sessionAffinity: None
+    type: ClusterIP
