--- a/example/wrapped.yaml
+++ b/example/wrapped.yaml
@@ -1281,6 +1281,41 @@ spec:
               namespace: openshift-sriov-network-operator
         - complianceType: musthave
           objectDefinition:
+            apiVersion: v1
+            data:
+              cnfdf12: '[{"name":"oc-1","interface":"ens1f0","phc2sysOpts":"-a -r
+                -m -n 24 --step_threshold 2.0", "ptp4lOpts":"-2 -s", "ptp4lConf":"[global]\n#\n#
+                Default Data Set\n#\ntwoStepFlag 1\nslaveOnly 0\npriority1 128\npriority2
+                128\ndomainNumber 24\n#utc_offset 37\nclockClass 255\nclockAccuracy
+                0xFE\noffsetScaledLogVariance 0xFFFF\nfree_running 0\nfreq_est_interval
+                1\ndscp_event 0\ndscp_general 0\ndataset_comparison G.8275.x\nG.8275.defaultDS.localPriority
+                128\n#\n# Port Data Set\n#\nlogAnnounceInterval -3\nlogSyncInterval
+                -4\nlogMinDelayReqInterval -4\nlogMinPdelayReqInterval -4\nannounceReceiptTimeout
+                3\nsyncReceiptTimeout 0\ndelayAsymmetry 0\nfault_reset_interval 4\nneighborPropDelayThresh
+                20000000\nmasterOnly 0\nG.8275.portDS.localPriority 128\n#\n# Run
+                time options\n#\nassume_two_step 0\nlogging_level 6\npath_trace_enabled
+                0\nfollow_up_info 0\nhybrid_e2e 0\ninhibit_multicast_service 0\nnet_sync_monitor
+                0\ntc_spanning_tree 0\ntx_timestamp_timeout 50\nunicast_listen 0\nunicast_master_table
+                0\nunicast_req_duration 3600\nuse_syslog 1\nverbose 0\nsummary_interval
+                0\nkernel_leap 1\ncheck_fup_sync 0\n#\n# Servo Options\n#\npi_proportional_const
+                0.0\npi_integral_const 0.0\npi_proportional_scale 0.0\npi_proportional_exponent
+                -0.3\npi_proportional_norm_max 0.7\npi_integral_scale 0.0\npi_integral_exponent
+                0.4\npi_integral_norm_max 0.3\nstep_threshold 2.0\nfirst_step_threshold
+                0.00002\nmax_frequency 900000000\nclock_servo pi\nsanity_freq_limit
+                200000000\nntpshm_segment 0\n#\n# Transport options\n#\ntransportSpecific
+                0x0\nptp_dst_mac 01:1B:19:00:00:00\np2p_dst_mac 01:80:C2:00:00:0E\nudp_ttl
+                1\nudp6_scope 0x0E\nuds_address /var/run/ptp4l\n#\n# Default interface
+                options\n#\nclock_type OC\nnetwork_transport L2\ndelay_mechanism E2E\ntime_stamping
+                hardware\ntsproc_mode filter\ndelay_filter moving_median\ndelay_filter_length
+                10\negressLatency 0\ningressLatency 0\nboundary_clock_jbod 0\n#\n#
+                Clock description\n#\nproductDescription ;;\nrevisionData ;;\nmanufacturerIdentity
+                00:00:00\nuserDescription ;\ntimeSource 0xA0\n"}]'
+            kind: ConfigMap
+            metadata:
+              name: ptp-configmap
+              namespace: openshift-ptp
+        - complianceType: musthave
+          objectDefinition:
             apiVersion: apps/v1
             kind: DaemonSet
             metadata:
@@ -1486,6 +1521,88 @@ spec:
               creationTimestamp: null
               name: openshift-ptp
             spec: {}
+        - complianceType: musthave
+          objectDefinition:
+            apiVersion: v1
+            kind: ServiceAccount
+            metadata:
+              creationTimestamp: null
+              name: linuxptp-daemon
+              namespace: openshift-ptp
+        - complianceType: musthave
+          objectDefinition:
+            apiVersion: rbac.authorization.k8s.io/v1
+            kind: Role
+            metadata:
+              creationTimestamp: null
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-549c7bc676
+              namespace: openshift-ptp
+            rules:
+            - apiGroups:
+              - security.openshift.io
+              resourceNames:
+              - privileged
+              resources:
+              - securitycontextconstraints
+              verbs:
+              - use
+        - complianceType: musthave
+          objectDefinition:
+            apiVersion: rbac.authorization.k8s.io/v1
+            kind: RoleBinding
+            metadata:
+              creationTimestamp: null
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-549c7bc676
+              namespace: openshift-ptp
+            roleRef:
+              apiGroup: rbac.authorization.k8s.io
+              kind: Role
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-549c7bc676
+            subjects:
+            - kind: ServiceAccount
+              name: linuxptp-daemon
+              namespace: openshift-ptp
+        - complianceType: musthave
+          objectDefinition:
+            apiVersion: rbac.authorization.k8s.io/v1
+            kind: ClusterRole
+            metadata:
+              creationTimestamp: null
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-785744698
+            rules:
+            - apiGroups:
+              - ptp.openshift.io
+              resources:
+              - '*'
+              verbs:
+              - '*'
+            - apiGroups:
+              - authentication.k8s.io
+              resources:
+              - tokenreviews
+              verbs:
+              - create
+            - apiGroups:
+              - authorization.k8s.io
+              resources:
+              - subjectaccessreviews
+              verbs:
+              - create
+        - complianceType: musthave
+          objectDefinition:
+            apiVersion: rbac.authorization.k8s.io/v1
+            kind: ClusterRoleBinding
+            metadata:
+              creationTimestamp: null
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-785744698
+            roleRef:
+              apiGroup: rbac.authorization.k8s.io
+              kind: ClusterRole
+              name: ptp-operator.4.12.0-202303021731-linuxptp-daemon-785744698
+            subjects:
+            - kind: ServiceAccount
+              name: linuxptp-daemon
+              namespace: openshift-ptp
         - complianceType: musthave
           objectDefinition:
             apiVersion: v1
