--- a/example/cluster-logging.v5.6.3/customresourcedefinition-clusterloggings.logging.openshift.io.yaml
+++ b/example/cluster-logging.v5.6.3/customresourcedefinition-clusterloggings.logging.openshift.io.yaml
@@ -41,7 +41,7 @@ spec:
                                 type: string
                         type: object
                     spec:
-                        description: ClusterLoggingSpec defines the desired state of ClusterLogging
+                        description: Specification of the desired behavior of ClusterLogging
                         properties:
                             collection:
                                 description: Specification of the Collection component for the cluster
@@ -417,8 +417,6 @@ spec:
                                                                 description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                                                                 type: object
                                                         type: object
-                                                required:
-                                                    - resources
                                                 type: object
                                             redundancyPolicy:
                                                 description: The policy towards data redundancy to specify the number of redundant primary shards
@@ -488,8 +486,6 @@ spec:
                                                             type: string
                                                     type: object
                                                 type: array
-                                        required:
-                                            - nodeCount
                                         type: object
                                     lokistack:
                                         description: "LokiStack contains information about which LokiStack to use for log storage if Type is set to LogStoreTypeLokiStack. \n The cluster-logging-operator does not create or manage the referenced LokiStack."
@@ -652,8 +648,6 @@ spec:
                                                                 description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                                                                 type: object
                                                         type: object
-                                                required:
-                                                    - resources
                                                 type: object
                                             replicas:
                                                 description: Number of instances to deploy for a Kibana deployment
@@ -715,7 +709,7 @@ spec:
                                 type: object
                         type: object
                     status:
-                        description: ClusterLoggingStatus defines the observed state of ClusterLogging
+                        description: Status defines the observed state of ClusterLogging
                         properties:
                             collection:
                                 properties:
