--- a/example-sriov-fec.v2.6.1/unwrapped/customresourcedefinition-sriovfecclusterconfigs.sriovfec.intel.com.yaml
+++ b/example-sriov-fec.v2.6.1/unwrapped/customresourcedefinition-sriovfecclusterconfigs.sriovfec.intel.com.yaml
@@ -3,6 +3,7 @@ kind: CustomResourceDefinition
 metadata:
     annotations:
         controller-gen.kubebuilder.io/version: v0.9.2
+        service.beta.openshift.io/inject-cabundle: "true"
     creationTimestamp: null
     name: sriovfecclusterconfigs.sriovfec.intel.com
 spec:
