--- a/example-sriov-fec.v2.6.1/unwrapped/kustomization.yaml
+++ b/example-sriov-fec.v2.6.1/unwrapped/kustomization.yaml
@@ -12,3 +12,4 @@ resources:
     - clusterrole-sriov-fec-metrics-reader.yaml
     - service-sriov-fec-webhook-service.yaml
     - deployment-sriov-fec-controller-manager.yaml
+    - apiservice-v2.sriovfec.intel.com.yaml
