--- a/example-sriov-fec.v2.6.1/unwrapped/service-sriov-fec-webhook-service.yaml
+++ b/example-sriov-fec.v2.6.1/unwrapped/service-sriov-fec-webhook-service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+    annotations:
+        service.beta.openshift.io/serving-cert-secret-name: sriov-fec-webhook-service
     creationTimestamp: null
     name: sriov-fec-webhook-service
     namespace: vran-acceleration-operators
