--- a/templates/policy-generator-config.yaml
+++ b/templates/policy-generator-config.yaml
@@ -3,23 +3,14 @@ kind: PolicyGenerator
 metadata:
   name: {{.PolicyName}}
 policyDefaults:
-  namespace: cnfdf12-common
-  policyAnnotations:
-    ran.openshift.io/ztp-deploy-wave: '1'
+  namespace: {{.PolicyNamespace}}
   generatePolicyPlacement: true
 policies:
   - name: {{.PolicyName}}
     manifests:
-      - path: sriov-network-operator.v4.12.0-202302280915
-      - path: ptp-operator.4.12.0-202303021731
-      - path: local-storage-operator.v4.12.0-202302280915
-      - path: cluster-logging.v5.6.3
+    {{range .Manifests}}
+      - path: {{.}}
+    {{end}}
     remediationAction: inform
-    placement:
-      clusterSelector:
-        matchExpressions:
-          - key: common-cnfdf12
-            operator: In
-            values:
-              - 'true'
+    placement: {{.Placement}}
 
